[package]
name = "game-detect"
version = "0.1.0"
edition = "2021"

[features]
default = ["steam", "gamejolt", "itchio", "lutris", "roblox", "minecraft", "http"]
http = ["dep:reqwest"]
steam = ["dep:vdf-reader", "dep:registry", "dep:home"]
lutris = ["dep:sqlite", "dep:home"]
itchio = ["dep:flate2", "dep:home", "dep:dirs", "dep:serde", "dep:serde_json", "dep:regex"]
gamejolt = ["dep:serde", "dep:serde_json", "dep:home", "dep:dirs"]
minecraft = []
roblox = ["dep:dirs", "dep:regex"]

[dependencies]
procfs = "0.17.0"
anyhow = "1.0.93"
vdf-reader = { version = "0.2.0", optional = true }
reqwest = { version = "0.12.9", optional = true }
flate2 = { version = "1.0.34", optional = true }
serde = { version = "1.0.215", optional = true }
serde_json = { version = "1.0.132", optional = true }
regex = { version = "1.11.1", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
sqlite = { version = "0.36.1", optional = true }

[target.'cfg(target_family = "windows")'.dependencies]
registry = { version = "1.3.0", optional = true }
dirs = { version = "5.0.1", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
home = { version = "0.5.9", optional = true }

[dev-dependencies]
actix-rt = "2.10.0"
